# ponte_ai_avatars

./: .gitignore  .gitmodules  FUTURE_FEATURE_REQUESTS.md  README.md  REPO_STRUCTURE.md  VOICE_MAPPING_EXPLANATION.md  braindump.md  eslint.config.mjs  jest.config.js  jest.setup.js  mvp_frontend_architect_review.md  mvp_frontend_demo_preparation_review.md  next.config.ts  package-lock.json  package.json  pon-33-implementation.patch  tailwind.config.js  temp_braindump.md  temp_checklist.md  temp_notes.md  temp_spec.md  temp_ticket.md
.github/: README.md
ai-avatar-browser-extension-v2/: .gitignore  manifest.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
ai-avatar-extension/: .gitignore  ICONS_NOTE.md  README.md  create-icons.html  create-parker-avatar.html  manifest.json  package-lock.json  package.json  tailwind.config.js  test-audio-integration.html  test-component-integration.html  test-openai-service.html  test-overlay.html  test-phase3-integration.html  tsconfig.json  webpack.config.js
backend/: .eslintrc.js  IMPLEMENTATION_SUMMARY.md  README.md  VIDEO_GENERATION.md  env.example  eslint.config.js  package-lock.json  package.json  setup.md  (+6 more)
browser_extension_backend/: .gitignore  Dockerfile  README.md  env.example  env.example.new  main.py  pyproject.toml  railway.json  requirements.txt  vercel.json
browser_extension_backend/app/: __init__.py  main.py
browser_extension_backend/app/config/: settings.py
browser_extension_backend/app/core/: container.py
browser_extension_backend/app/middleware/: __init__.py  security.py
browser_extension_backend/app/models/: errors.py  health.py  token.py
browser_extension_backend/app/services/: cache.py  openai_client.py  token_service.py  voice_config.py  voice_monitoring.py
browser_extension_backend/app/utils/: yaml_loader.py
browser_extension_backend/tests/: __init__.py
(+462 files in other folders)
